--- a/frontend/components/MyNextRecipe/NavLinks.module.scss
+++ b/frontend/components/MyNextRecipe/NavLinks.module.scss
@@ -38,6 +38,7 @@
     background-color: none;
     justify-content: end;
     padding-top: 16rem;
+    margin: 0 var(--body-side-margin);
     .navLink {
       border: none;
       padding: 16rem 0;
